--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-distlib==0.3.5
-filelock==3.7.1
-platformdirs==2.5.2
-virtualenv==20.16.2
+asgiref==3.5.2
+Django==4.0.6
+sqlparse==0.4.2
+tzdata==2022.1
